# py-debian-poetry-script-template

./: Dockerfile  README.md  pyproject.toml
app/: main.py
app/core/: cfg.py
app/routes/: route_blueprints.py
app/routes/api/liveness/: liveness_routes.py
app/routes/api/readiness/: readiness_routes.py
